[package]
name = "passwords"
version = "3.1.9"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2021"
repository = "https://github.com/magiclen/passwords"
homepage = "https://magiclen.org/passwords"
keywords = ["password", "score", "strength", "bcrypt", "generate"]
categories = ["algorithms"]
description = "This crate provides useful tools to generate multiple readable passwords, as well as analyze and score them."
readme = "README.md"
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE", "data/**/*"]

[dependencies]
random-pick = "1.2.8"
rand = { version = "0.8", optional = true }
md5 = { version = "0.7", optional = true }
base64 = { version = "0.13", optional = true }
bcrypt = { version = "0.12", optional = true }

[dev-dependencies]
regex = "1"
assert_approx_eq = "1.1"

[features]
crypto = ["md5", "bcrypt", "base64", "rand"]
common-password = []

[package.metadata.docs.rs]
all-features = true