[package]
name = "passwords"
version = "3.1.18"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2024"
rust-version = "1.85"
repository = "https://github.com/magiclen/passwords"
homepage = "https://magiclen.org/passwords"
keywords = ["password", "score", "strength", "bcrypt", "generate"]
categories = ["algorithms"]
description = "This crate provides useful tools to generate multiple readable passwords, as well as analyze and score them."
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE", "data/**/*"]

[dependencies]
rand = "0.10"

md5 = { version = "0.8", optional = true }
base64 = { version = "0.22", optional = true }
bcrypt = { version = "0.19", optional = true }

[dev-dependencies]
regex = "1"
assert-eq-float = "0.1"

[features]
crypto = ["md5", "bcrypt", "base64"]
common-password = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]